WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283879
Fix dynamic update of "transform" attribute
https://bugs.webkit.org/show_bug.cgi?id=283879
Summary
Fix dynamic update of "transform" attribute
Ahmad Saleem
Reported
2024-12-01 16:22:05 PST
Hi Team, While going through SVG specific failure, I came across one which can be fixed: Blink WPT:
https://chromium-review.googlesource.com/c/chromium/src/+/3260056
WPT Test Case (live):
http://wpt.live/svg/coordinate-systems/svgtransformlist-replaceitem.html
WPT Test Case:
https://wpt.fyi/results/svg/coordinate-systems/svgtransformlist-replaceitem.html?label=experimental&label=master&aligned
^ Already passes in LBSE, so this is just LegacySVG. Just raising so we can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-01 16:25:03 PST
<
rdar://problem/140761655
>
Ahmad Saleem
Comment 2
2024-12-01 16:28:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37293
EWS
Comment 3
2025-01-16 13:05:47 PST
Committed
289022@main
(7d6ca91cb984): <
https://commits.webkit.org/289022@main
> Reviewed commits have been landed. Closing PR #37293 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug