Fix dynamic update of "transform" attribute

https://bugs.webkit.org/show_bug.cgi?id=283879
rdar://problem/140761655

Reviewed by Simon Fraser.

Merge: https://chromium-review.googlesource.com/c/chromium/src/+/3260056

If RenderSVGText::m_needsTransformUpdate is true, we should update
font too.

* LayoutTests/imported/w3c/web-platform-tests/svg/coordinate-systems/svgtransformlist-replaceitem-expected.txt:
* Source/WebCore/rendering/svg/RenderSVGText.cpp:
(WebCore::RenderSVGText::layout):
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/svg/coordinate-systems/svgtransformlist-replaceitem-expected.txt: Removed
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/svg/coordinate-systems/svgtransformlist-replaceitem-expected.txt: Removed
* LayoutTests/platform/glib/svg/repaint/text-repainting-after-modifying-transform-repaint-rects-expected.txt: Rebaselined
* LayoutTests/platform/ios/svg/repaint/text-repainting-after-modifying-transform-repaint-rects-expected.txt: Rebaselined
* LayoutTests/svg/repaint/text-repainting-after-modifying-transform-repaint-rects-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/289022@main